OSX: More work on Preferences UI.

--- a/MPfm.OSX/Windows/XIB/MainWindow.xib
+++ b/MPfm.OSX/Windows/XIB/MainWindow.xib
@@ -1313,7 +1313,7 @@
                                                                                 </textFieldCell>
                                                                             </textField>
                                                                             <searchField verticalHuggingPriority="750" id="189">
-                                                                                <rect key="frame" x="412" y="3" width="384.00000006053597" height="22"/>
+                                                                                <rect key="frame" x="412.00000012082711" y="3" width="384" height="22"/>
                                                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
                                                                                 <searchFieldCell key="cell" selectable="YES" editable="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="190">
                                                                                     <font key="font" metaFont="smallSystem"/>
