OSX: Fixed bugs with initial appearance of windows, fixed bug in CloudConnect close.
- Fixed several XIB files that were missing some attributes for NSWindow
(enable 'Release when closed', disable 'Restorable', disable 'Visible on
launch', etc.). This should fix the windows that were visible before
being centered and before getting the fonts loaded.
- Fixed bug where CloudConnect would not close and call ViewDestroyed;
the delegate used in NSWindow was conflicting with the use of the
DidBecomeKey event. Now using the WillClose event instead.

--- a/MPfm.OSX/Windows/XIB/SyncWindow.xib
+++ b/MPfm.OSX/Windows/XIB/SyncWindow.xib
@@ -51,8 +51,8 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="2" customClass="SyncWindow">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES"/>
+        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" visibleAtLaunch="NO" animationBehavior="default" id="2" customClass="SyncWindow">
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES" unifiedTitleAndToolbar="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="131" y="74" width="624" height="563"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1058"/>
