--- a/MPfm.OSX/Windows/XIB/EffectsWindow.xib
+++ b/MPfm.OSX/Windows/XIB/EffectsWindow.xib
@@ -71,10 +71,12 @@
                 <outlet property="lblEQValue7" destination="159" id="471"/>
                 <outlet property="lblEQValue8" destination="199" id="472"/>
                 <outlet property="lblEQValue9" destination="201" id="473"/>
+                <outlet property="lblEqualizer" destination="QD0-4w-3k2" id="MGv-De-Yv0"/>
                 <outlet property="lblName" destination="388" id="547"/>
                 <outlet property="lblScale0" destination="370" id="553"/>
                 <outlet property="lblScaleMinus6" destination="374" id="554"/>
                 <outlet property="lblScalePlus6" destination="372" id="552"/>
+                <outlet property="lblTitle" destination="HqA-K3-M2h" id="KE9-fc-v5t"/>
                 <outlet property="lblTitleInformation" destination="386" id="545"/>
                 <outlet property="lblTitlePreset" destination="376" id="546"/>
                 <outlet property="popupPreset" destination="378" id="502"/>
@@ -83,25 +85,27 @@
                 <outlet property="viewBackgroundFaders" destination="3c1-cB-Iq2" id="o0i-ms-c4c"/>
                 <outlet property="viewBackgroundInformation" destination="549" id="551"/>
                 <outlet property="viewBackgroundPreset" destination="541" id="550"/>
+                <outlet property="viewEqualizer" destination="zhQ-Td-Gpx" id="FQy-7I-CPz"/>
+                <outlet property="viewTitle" destination="oyl-X7-oDk" id="7GH-RQ-Xu6"/>
                 <outlet property="window" destination="2" id="6"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <window title="Effects" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" visibleAtLaunch="NO" animationBehavior="default" id="2" customClass="EffectsWindow">
+        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" oneShot="NO" visibleAtLaunch="NO" animationBehavior="default" id="2" customClass="EffectsWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" texturedBackground="YES" unifiedTitleAndToolbar="YES"/>
-            <rect key="contentRect" x="131" y="74" width="906" height="356"/>
+            <rect key="contentRect" x="131" y="74" width="906" height="421"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1058"/>
             <view key="contentView" id="3" customClass="MPfmView">
-                <rect key="frame" x="0.0" y="0.0" width="906" height="356"/>
+                <rect key="frame" x="0.0" y="0.0" width="906" height="421"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <customView id="541" customClass="MPfmView">
-                        <rect key="frame" x="774" y="234" width="134" height="120"/>
+                        <rect key="frame" x="774" y="247" width="134" height="120"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
                             <textField verticalHuggingPriority="750" id="376">
-                                <rect key="frame" x="6" y="102" width="118" height="18"/>
+                                <rect key="frame" x="6" y="100" width="118" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Presets" id="377">
                                     <font key="font" metaFont="systemBold"/>
@@ -110,7 +114,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" id="402">
-                                <rect key="frame" x="26" y="50" width="73" height="16"/>
+                                <rect key="frame" x="26" y="48" width="73" height="16"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="EQ On" id="403">
                                     <font key="font" metaFont="smallSystem"/>
@@ -119,7 +123,7 @@
                                 </textFieldCell>
                             </textField>
                             <popUpButton verticalHuggingPriority="750" id="378">
-                                <rect key="frame" x="5" y="66" width="118" height="26"/>
+                                <rect key="frame" x="5" y="64" width="118" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="381" id="379">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -137,7 +141,7 @@
                                 </connections>
                             </popUpButton>
                             <button id="384">
-                                <rect key="frame" x="6" y="46" width="35" height="18"/>
+                                <rect key="frame" x="6" y="44" width="35" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="check" bezelStyle="regularSquare" imagePosition="left" alignment="left" state="on" inset="2" id="385">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -148,7 +152,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" id="555" customClass="MPfmButton">
-                                <rect key="frame" x="7" y="13" width="113" height="26"/>
+                                <rect key="frame" x="7" y="11" width="113" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="smallSquare" title="New Preset" bezelStyle="smallSquare" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="556">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -161,7 +165,7 @@
                         </subviews>
                     </customView>
                     <customView id="3c1-cB-Iq2" customClass="MPfmView">
-                        <rect key="frame" x="0.0" y="3" width="771" height="353"/>
+                        <rect key="frame" x="0.0" y="7" width="771" height="353"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
                             <textField verticalHuggingPriority="750" id="19">
@@ -590,11 +594,11 @@
                         </subviews>
                     </customView>
                     <customView id="549" customClass="MPfmView">
-                        <rect key="frame" x="774" y="20" width="134" height="216"/>
+                        <rect key="frame" x="774" y="7" width="134" height="242"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <subviews>
                             <textField verticalHuggingPriority="750" id="386">
-                                <rect key="frame" x="6" y="198" width="100" height="18"/>
+                                <rect key="frame" x="6" y="222" width="100" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Current Preset" id="387">
                                     <font key="font" metaFont="systemBold"/>
@@ -603,7 +607,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" id="388">
-                                <rect key="frame" x="6" y="176" width="100" height="16"/>
+                                <rect key="frame" x="6" y="199" width="100" height="16"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Name:" id="389">
                                     <font key="font" metaFont="smallSystem"/>
@@ -612,7 +616,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" id="390">
-                                <rect key="frame" x="8" y="150" width="113" height="22"/>
+                                <rect key="frame" x="8" y="173" width="113" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="391">
                                     <font key="font" metaFont="cellTitle"/>
@@ -624,7 +628,7 @@
                                 </connections>
                             </textField>
                             <button verticalHuggingPriority="750" id="392" customClass="MPfmButton">
-                                <rect key="frame" x="8" y="114" width="113" height="26"/>
+                                <rect key="frame" x="8" y="137" width="113" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="smallSquare" title="Save Preset" bezelStyle="smallSquare" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="393">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -635,7 +639,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" id="396" customClass="MPfmButton">
-                                <rect key="frame" x="8" y="83" width="113" height="26"/>
+                                <rect key="frame" x="8" y="105" width="113" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="smallSquare" title="Delete Preset" bezelStyle="smallSquare" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="397">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -646,7 +650,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" id="398" customClass="MPfmButton">
-                                <rect key="frame" x="8" y="20" width="113" height="26"/>
+                                <rect key="frame" x="8" y="41" width="113" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="smallSquare" title="Reset" bezelStyle="smallSquare" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="399">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -657,7 +661,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" id="400" customClass="MPfmButton">
-                                <rect key="frame" x="8" y="52" width="113" height="26"/>
+                                <rect key="frame" x="8" y="73" width="113" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="smallSquare" title="Normalize" bezelStyle="smallSquare" imagePosition="left" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="401">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -667,6 +671,36 @@
                                     <action selector="actionAutoLevel:" target="-2" id="515"/>
                                 </connections>
                             </button>
+                        </subviews>
+                    </customView>
+                    <customView id="oyl-X7-oDk" customClass="MPfmView">
+                        <rect key="frame" x="0.0" y="389" width="906" height="32"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <subviews>
+                            <textField verticalHuggingPriority="750" id="HqA-K3-M2h">
+                                <rect key="frame" x="8" y="3" width="300" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Effects" id="8Ia-Yl-1yB">
+                                    <font key="font" metaFont="systemBold" size="14"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                    </customView>
+                    <customView id="zhQ-Td-Gpx" customClass="MPfmView">
+                        <rect key="frame" x="0.0" y="366" width="906" height="25"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <subviews>
+                            <textField verticalHuggingPriority="750" id="QD0-4w-3k2">
+                                <rect key="frame" x="8" y="3" width="572" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="18-Band Equalizer" id="H9L-z3-026">
+                                    <font key="font" size="12" name="HelveticaNeue"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                     </customView>
                 </subviews>
